--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
+@import "react-datepicker/dist/react-datepicker.css";
+
 .App {
   text-align: center;
+  margin: auto;
+  background-color: #fff;
+  height: 100vh;
 }
 
 .App-logo {
